2001-08-03  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c (create_kill_dialog): pass in the signal now
	so either SIGKILL or SIGTERM can use this dialog. Change the
	button labels accordingly.

	* callbacks.c: use the create_kill_dailog properly adding
	the signal to the argument.

	* interface.c: left align the disk name and mount point

	* util.c: fix a memory leak

2001-08-02  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: improve the renice dialog by adding a label
	indicating whether the priority is high etc.

	* infoview.c: sync the priority label with that of the renice
	dialog

2001-08-01  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c (create_root_password_dialog) pass a gchar here
	as a argument for the dialog text. This way a seperate dialog
	asking if the user wants to enter the password is not needed. 
	Beautify the dialog a bit
	(create_renice_dialog) change the button to read Change Priority
	instead of renice.

	* procactions.c: pass the root password text to 
	create_root_passsword_dialog

2001-08-31   Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: left justify the disk name and mount point
	clist entries.
	
	* procactions.c: do the su stuff on renice. Slightly different
	error message for when the user does not have permission or
	when they have permission but try to lower the nice value.

	* procactions.c (renice): pass procdata in here in order to 
	pass it to the password dialog.

	* procdialogs.c (renice_accept): pass procdata ro renice

2001-08-31  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: add notebook tab for process viewer and
	system monitor settings. Add settings for graph colors, and
	graph/disk update intervals.

	* callbacks.c: change gpointer to a procdata instead of the clist
	so that you don't have to access the clist to use this function
	anywhere in the code. The clist is now stored in procdata.

	* interface.c: pass procdata to cb_update_disks
