@@ -1,5 +1,10 @@
 2001-08-03  Kevin Vandersloot <kfv101@psu.edu>
 
+	* procdialogs.c: cosmetic improvements to the prefs dialog
+	mainly making the two tabs have similar layouts.
+
+2001-08-03  Kevin Vandersloot <kfv101@psu.edu>
+
 	* procdialogs.c (create_kill_dialog): pass in the signal now
 	so either SIGKILL or SIGTERM can use this dialog. Change the
 	button labels accordingly.
